--- a/style.css
+++ b/style.css
@@ -1,285 +1,346 @@
-body{
-    background-color: #19191B;
-    color: white;
-    margin: 0;
-    padding: 0;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    font-family: "Nunito Sans" , sans-serif;
+body {
+  background-color: #19191b;
+  color: white;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  font-family: "Nunito Sans", sans-serif;
 }
-.bg_gradient{
-    position: absolute;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    
+.bg_gradient {
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
 }
 
-.container{
-    width: 90%;
-    margin: auto;
+.container {
+  width: 90%;
+  margin: auto;
 }
+
+/* burger-menu styles start------------ */
+
+.burger-menu {
+  display: none;
+  width: 98%;
+  height: min-content;
+  background-color: #2c2c33;
+  position: absolute;
+  z-index: 1;
+  top: 1%;
+  right: 1%;
+  left: 1%;
+  border: 2px solid white;
+  border-radius: 10px;
+}
+
+.burger-menu__content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.burger-menu__btn_close {
+  width: 4%;
+  height: 7%;
+  margin: 4% 0;
+  cursor: pointer;
+}
+
+.burger-menu__input {
+  width: 30%;
+  height: 10%;
+  background-color: transparent;
+  border-radius: 5px;
+  border: 1px solid white;
+}
+
+.burger-menu__list {
+  height: 60%;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.burger-menu__item > a {
+  text-decoration: none;
+  color: white;
+  transition: 0.5s;
+}
+
+.burger-menu__item > a:hover {
+  color: #5454d4;
+}
+
+/* burger-menu styles end------------  */
 
 /* navbar start_______________ */
 
-.navbar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.navbar__logo{
-    width: 10%;
+.navbar__logo {
+  width: 10%;
 }
 
-.navbar__list{
-    display: flex;
-    list-style-type: none;
-    width: 30%;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 18px;
+.navbar__list {
+  display: flex;
+  list-style-type: none;
+  width: 30%;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 18px;
 }
 
-.list__item >a{
-    text-decoration: none;
-    color: grey;
+.list__item > a {
+  text-decoration: none;
+  color: grey;
 }
-.list__item:hover>a {
-    color: #5454D4
+.list__item:hover > a {
+  color: #5454d4;
 }
 
-.navbar__input{
-    width: 15%;
-    height: 25px;
-    background-color: #19191B;
-    border: 2px solid white;
-    border-radius: 5px;
+.navbar__input {
+  width: 15%;
+  height: 25px;
+  background-color: #19191b;
+  border: 2px solid white;
+  border-radius: 5px;
+}
+
+.navbar__btn_burger {
+  display: none;
 }
 
 /* navbar end_______________ */
 
-header{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 50px;
+header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
 }
 
-.header__block_left{
-    width: 40%;
+.header__block_left {
+  width: 40%;
 }
 
-.header__title_left{
-    font-size: 80px;
-    line-height: 1;
-    margin-top: 25%;
-    margin-bottom: 0;
+.header__title_left {
+  font-size: 80px;
+  line-height: 1;
+  margin-top: 25%;
+  margin-bottom: 0;
 }
 
-.header__desk_left{
-    font-size: 21px;
-    line-height: 2;
+.header__desk_left {
+  font-size: 21px;
+  line-height: 2;
 }
 
-.header__btn{
-    width: 40%;
-    height: 45px;
-    background-color: #5454D4;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 18px;
-    font-weight: bold;
-    padding: 1%;
+.header__btn {
+  width: 40%;
+  height: 45px;
+  background-color: #5454d4;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 1%;
 }
 
-.btn__icon{
-    margin-left: 7px;
+.btn__icon {
+  margin-left: 7px;
 }
 
-.header__block_right{
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    position: relative;
-
+.header__block_right {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  position: relative;
 }
 
-.vector{
-    position: absolute
+.vector {
+  position: absolute;
 }
 
-#vector1{
-    top: 124px;
-    left: -90px;
+#vector1 {
+  top: 124px;
+  left: -81px;
 }
-#vector2{
-    top: 70px;
-    right: -40px;
+#vector2 {
+  top: 70px;
+  right: -54px;
 }
-#vector3{
-    bottom: 10px;
-    left: -74px;
+#vector3 {
+  bottom: 20px;
+  left: -12px;
 }
-#vector4{
-    bottom: 20px;
-    right: -54px;
+#vector4 {
+  bottom: 54px;
+  right: -54px;
 }
+
 /* header style end___________________ */
 
 /* services block start________________ */
 
-.services{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.services {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.services__title_main{
-    font-size: 60px;
-    font-weight: 700;
-    text-align: center;
-    width: 60%;
-    font-size: "Open-Sans", sans-serif;
+.services__title_main {
+  font-size: 60px;
+  font-weight: 700;
+  text-align: center;
+  width: 60%;
+  font-size: "Open-Sans", sans-serif;
 }
 
-.services__list{
-    display: flex;
-    list-style-type: none;
-    width: 100%;
-    flex-wrap: wrap; 
-    justify-content:space-between;
+.services__list {
+  display: flex;
+  list-style-type: none;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
-
-.services__item{
-    width: 20%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    margin: 0 5%;
-    margin-bottom: 25px;
+.services__item {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin: 0 5%;
+  margin-bottom: 25px;
 }
 
-.services__title{
-    font-size: 28px;
-    font-weight: 600;
-    margin-bottom: 0%;
+.services__title {
+  font-size: 28px;
+  font-weight: 600;
+  margin-bottom: 0%;
 }
 
-.services__desk{
-    font-size: 20px;
-    color: grey;
+.services__desk {
+  font-size: 20px;
+  color: grey;
 }
 
 /* services block end____________________ */
 
 /* portfolio styles start_________________ */
 
-.portfolio__title{
-    font-size: 58px;
-    font-weight: 800;
+.portfolio__title {
+  font-size: 58px;
+  font-weight: 800;
 }
 
-.portfolio__list{
-    display: flex;
-    list-style-type: none;
-    width: 100%;
-    justify-content: space-evenly;
-    
+.portfolio__list {
+  display: flex;
+  list-style-type: none;
+  width: 100%;
+  justify-content: space-evenly;
 }
 
-.portfolio__item{
-    background-color: #1E1E20;;
-    border-radius: 15px;
-    padding: 1.5%;
-    height: min-content;
+.portfolio__item {
+  background-color: #1e1e20;
+  border-radius: 15px;
+  padding: 1.5%;
+  height: min-content;
 }
 
-.portfolio__item:nth-child(2){
-    margin-top: 90px;
+.portfolio__item:nth-child(2) {
+  margin-top: 90px;
 }
 
-.portfolio__item:nth-child(3){
-    margin-top: 180px;
+.portfolio__item:nth-child(3) {
+  margin-top: 180px;
 }
 
-.portfolio__icon_second{
-    display: none;
+.portfolio__icon_second {
+  display: none;
 }
 
-.portfolio__icon{
-    margin-left: 45%;
-    margin-top: 50px;
+.portfolio__icon {
+  margin-left: 45%;
+  margin-top: 50px;
 }
 /* portfolio styles end_______________ */
 
 /* info block start */
 
-.info__block{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 120px;
+.info__block {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 120px;
 }
 
-.info__block_title{
-    font-size: 60px;
-    font-weight: 700;
-    width: 60%;
+.info__block_title {
+  font-size: 60px;
+  font-weight: 700;
+  width: 60%;
 }
 
-.info__block_btn{
-    background-color: #5454D4;
-    color: white;
-    border: none;
-    font-size: 21px;
-    font-weight: 700;
-    border-radius: 10px;
-    width: 15%;
-    height: 65px;
-    cursor: pointer;
+.info__block_btn {
+  background-color: #5454d4;
+  color: white;
+  border: none;
+  font-size: 21px;
+  font-weight: 700;
+  border-radius: 10px;
+  width: 15%;
+  height: 65px;
+  cursor: pointer;
 }
 /* info block :end */
 
 /* footer block start____________________ */
 
-footer{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 50px;
+footer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
 }
 
-.footer__logo{
-    width: 132px;
-    height: 40px;
+.footer__logo {
+  width: 132px;
+  height: 40px;
 }
 
-.footer__list{
-    display: flex;
-    list-style-type: none;
-    width: 30%;
-    justify-content: space-between;
-    color: gray;
+.footer__list {
+  display: flex;
+  list-style-type: none;
+  width: 30%;
+  justify-content: space-between;
+  color: gray;
 }
 
-.footer__item:hover{
-    color: #5454D4;
+.footer__item:hover {
+  color: #5454d4;
 }
 
-.footer__info{
-    display: flex;
-    list-style-type: none;
-    width: 30%;
-    justify-content: right;
-    color: gray;
-    font-size: 12px;
+.footer__info {
+  display: flex;
+  list-style-type: none;
+  width: 30%;
+  justify-content: right;
+  color: gray;
+  font-size: 12px;
 }
 /* footer block end____________________ */
