--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 /* burger-menu styles start------------ */
 
 .burger-menu {
-  display: none;
+  /* display: none; */
   width: 98%;
   height: min-content;
   background-color: #2c2c33;
@@ -339,7 +339,7 @@ footer {
   display: flex;
   list-style-type: none;
   width: 30%;
-  justify-content: right;
+  justify-content: center;
   color: gray;
   font-size: 12px;
 }
